--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 										<!-- <span class="date">April 7, 2017</span> -->
 										<h2><a href="IPD.html" target="_blank">Industrial Design Projects</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/IPD_1.PNG" alt="" /></a>
+									<a href="IPD.html" target="_blank" class="image fit"><img src="images/IPD_1.PNG" alt="" /></a>
 									<p>Industrial design is the professional practice of designing products, devices, objects, and services used by millions of people around the world every day.
 										As part of this course (IPD 5270), I designed and prototyped a single-handed peppermill, an innovative chopping board and a multifunctional laptop stand.
 									</p>
