--- a/suspension&steering.html
+++ b/suspension&steering.html
@@ -63,7 +63,7 @@
 									<p><b><i><a href="http://www.redshift-racing.in/index.html">Team RedShift Racing India</a></i></b></p>
 								</header>
 								<figure>
-									<div class="image main"><img src="images/suspension&steering_1.PNG" alt="" />
+									<div class="image main"><img src="images/suspension&steering_1.png" alt="" />
 										<figcaption><center> <i>Our All Wheel Drive Prototype "Pratyush" at Mega ATV 2022</i> </center></figcaption>
 									</div>
 								</figure>
