--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 										practical application in mechanical engineering. In my quest for new challenges, I am driven to apply my knowledge and skills to address real-world issues, 
 										striving for advancements that foster the well-being and prosperity of humankind.</p>
 								</header>
-								<img src="images/rohan.PNG" alt="" />
+								<a href="#" class="image fit"><img src="images/rohan.PNG" alt="" /></a>
 								
 							</article>
 							<ul class="actions special">
