--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 										and I have had the opportunity to apply my knowledge through hands-on projects and research. In my quest for new challenges, I am driven to apply my knowledge and skills to address real-world issues, 
 										striving for advancements that foster the well-being and prosperity of humankind.</p>
 								</header>
-								<img src="images/rohan.PNG" alt="" />
+								<li><a href="#"><img src="images/rohan.PNG" alt="" /></a></li>
 								
 							</article>
 							<ul class="actions special">
