--- a/education.html
+++ b/education.html
@@ -52,7 +52,7 @@
 									</header>
 									<div class="row">
 										<div class="col-12 col-12-small">
-											<span class="image right"><img src="images/upenn.PNG" alt="" /></span>
+											<span class="image right"><img src="images/upenn.png" alt="" /></span>
 											<h3>Coursework</h3>
 											
 											<ul>
