--- a/suspension&steering.html
+++ b/suspension&steering.html
@@ -206,10 +206,10 @@
 													</a>
 												</div>
 												<div class="col-4">
-													<a href="images/suspension&steering_10.PNG" data-lightbox="gallery" data-title="Testing">
+													<a href="images/suspension&steering_22.PNG" data-lightbox="gallery" data-title="Testing">
 														<span class="image fit">
-															<img src="images/suspension&steering_10.PNG" alt="" />
-															<figcaption style="text-align: center; font-style: italic;">Testing</figcaption>
+															<img src="images/suspension&steering_22.PNG" alt="" />
+															<figcaption style="text-align: center; font-style: italic;">GD&T of pinion</figcaption>
 														</span>
 													</a>
 												</div>
@@ -218,10 +218,10 @@
 										<div class="box alt">
 											<div class="row gtr-50 gtr-uniform">
 												<div class="col-4">
-													<a href="images/suspension&steering_9.PNG" data-lightbox="gallery" data-title="Manufactured rear hub">
+													<a href="images/suspension&steering_23.PNG" data-lightbox="gallery" data-title="3D printed rear hub">
 														<span class="image fit">
-															<img src="images/suspension&steering_9.PNG" alt="" />
-															<figcaption style="text-align: center; font-style: italic;">Manufactured rear hub</figcaption>
+															<img src="images/suspension&steering_23.PNG" alt="" />
+															<figcaption style="text-align: center; font-style: italic;">3D printed rear hub</figcaption>
 														</span>
 													</a>
 												</div>
@@ -234,9 +234,9 @@
 													</a>
 												</div>
 												<div class="col-4">
-													<a href="images/suspension&steering_10.PNG" data-lightbox="gallery" data-title="Testing">
+													<a href="images/suspension&steering_20.PNG" data-lightbox="gallery" data-title="Testing">
 														<span class="image fit">
-															<img src="images/suspension&steering_10.PNG" alt="" />
+															<img src="images/suspension&steering_20.PNG" alt="" />
 															<figcaption style="text-align: center; font-style: italic;">Testing</figcaption>
 														</span>
 													</a>
