--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<form method="post" action="process_form.php">
+							<form method="post" action="https://formspree.io/f/mvoewwzr">
 								<div class="fields">
 									<div class="field">
 										<label for="name">Name</label>
