--- a/index.html
+++ b/index.html
@@ -199,24 +199,17 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<form method="post" action="https://formspree.io/f/mvoewwzr">
-								<div class="fields">
-									<div class="field">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" required />
-									</div>
-									<div class="field">
-										<label for="email">Email</label>
-										<input type="email" name="email" id="email" required />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="3" required></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
+							<form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/f/{form_id}" method="post">
+							  <fieldset id="fs-frm-inputs">
+							    <label for="full-name">Full Name</label>
+							    <input type="text" name="name" id="full-name" placeholder="First and Last" required="">
+							    <label for="email-address">Email Address</label>
+							    <input type="email" name="_replyto" id="email-address" placeholder="email@domain.tld" required="">
+							    <label for="message">Message</label>
+							    <textarea rows="5" name="message" id="message" placeholder="Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Donec ullamcorper nulla non metus auctor fringilla nullam quis risus." required=""></textarea>
+							    <input type="hidden" name="_subject" id="email-subject" value="Contact Form Submission">
+							  </fieldset>
+							  <input type="submit" value="Submit">
 							</form>
 						</section>
 						<section class="split contact">
