--- a/index.html
+++ b/index.html
@@ -199,7 +199,26 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/f/{form_id}" method="post">
+							<form method="post" action="https://formspree.io/f/mvoewwzr">
+								<div class="fields">
+									<div class="field">
+										<label for="name">Name</label>
+										<input type="text" name="name" id="name" required />
+									</div>
+									<div class="field">
+										<label for="email">Email</label>
+										<input type="email" name="email" id="email" required />
+									</div>
+									<div class="field">
+										<label for="message">Message</label>
+										<textarea name="message" id="message" rows="3" required></textarea>
+									</div>
+								</div>
+								<ul class="actions">
+									<li><input type="submit" value="Send Message" /></li>
+								</ul>
+							</form>
+						<!--	<form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/f/{form_id}" method="post">
 							  <fieldset id="fs-frm-inputs">
 							    <label for="full-name">Full Name</label>
 							    <input type="text" name="name" id="full-name" placeholder="First and Last" required="">
@@ -210,7 +229,7 @@
 							    <input type="hidden" name="_subject" id="email-subject" value="Contact Form Submission">
 							  </fieldset>
 							  <input type="submit" value="Submit">
-							</form>
+							</form> -->
 						</section>
 						<section class="split contact">
 							<section class="alt">
