--- a/generic.html
+++ b/generic.html
@@ -47,7 +47,7 @@
 									<h1>Resume</h1>
 								</header>
 								<center>
-									<iframe src= "pdf/Rohan_Resume.pdf" 
+									<iframe src= "pdf/RohanShende_Resume.pdf" 
 												width="930"
 												height="1150"> 
 									</iframe>
